[workspace]
members = ["crates/*", "xtask"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["UNML Contributors"]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "2.0"
anyhow = "1"

clap = { version = "4", features = ["derive"] }

reqwest = { version = "0.12", features = ["json", "stream"] }

sha1 = "0.10"
sha2 = "0.10"

num_cpus = "1"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"

gpui = { git = "https://github.com/zed-industries/zed" }

unml-core = { path = "crates/unml-core" }
unml-download = { path = "crates/unml-download" }
unml-launcher = { path = "crates/unml-launcher" }
unml-java = { path = "crates/unml-java" }
unml-mods = { path = "crates/unml-mods" }
unml-auth = { path = "crates/unml-auth" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
