[workspace]
members = ["crates/*", "xtask"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["UNML Contributors"]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
futures = "0.3"
gpui = "0.2.2"
gpui-component = "0.5.0"
gpui-component-assets = "0.5.0"
gpui-router = "0.3.0"
num_cpus = "1"
reqwest = { version = "0.13.1", features = ["json", "stream", "form"] }
rust-i18n = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
unml-auth = { path = "crates/unml-auth" }
unml-core = { path = "crates/unml-core" }
unml-download = { path = "crates/unml-download" }
unml-java = { path = "crates/unml-java" }
unml-launcher = { path = "crates/unml-launcher" }
unml-macros = { path = "crates/unml-macros" }
unml-mods = { path = "crates/unml-mods" }
uuid = { version = "1", features = ["v3",  "serde"] }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
