[package]
name = "unml-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
