[package]
name = "unml-download"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
unml-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
futures = { workspace = true }
num_cpus = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
