[package]
name = "unml-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "unml"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
gpui-router = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
unml-auth = { workspace = true }
unml-core = { workspace = true }
unml-download = { workspace = true }
unml-java = { workspace = true }
unml-launcher = { workspace = true }
unml-macros = { workspace = true }
unml-mods = { workspace = true }
