[package]
name = "unml-java"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "fs", "io-util"] }
unml-core = { path = "../unml-core" }

[dev-dependencies]
tokio = { workspace = true }
