[package]
name = "unml-launcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
unml-core = { workspace = true }
unml-java = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
